--- a/symmetric_fxns/final.tex
+++ b/symmetric_fxns/final.tex
@@ -450,18 +450,18 @@
       \none & 1 & 1 & 4 \\
       \none & 2 & 2 \\
        1 & 3  
-    \end{ytableau}\quad,\quad    \\    
+    \end{ytableau}\quad.\quad    \\    
   \end{align*}  
   
-  $K_{(4,3,2)/(1,1), (3,1^4)}$:
+  $K_{(4,3,2)/(1,1), (3,1^4)} = 13$:
   
-  $K_{(4,3,2)/(1,1), (2^3,1)}$:
+  $K_{(4,3,2)/(1,1), (2^3,1)} = 12$:
   
-  $K_{(4,3,2)/(1,1), (2^2,1^3)}$:
+  $K_{(4,3,2)/(1,1), (2^2,1^3)} = 22$:
   
-  $K_{(4,3,2)/(1,1), (2,1^5)}$:
+  $K_{(4,3,2)/(1,1), (2,1^5)} = 41$:
   
-  $K_{(4,3,2)/(1,1), (1^7)}$:
+  $K_{(4,3,2)/(1,1), (1^7)} = 77$
 
 \end{proof}
 
