--- a/symmetric_fxns/final.tex
+++ b/symmetric_fxns/final.tex
@@ -486,7 +486,9 @@
     &= \prod_{i=1}^{\ell(\lambda)} \lambda_i \cfrac{\partial}{\partial p_{\lambda_i}} \\
     &= a_{\lambda} \cfrac{\partial^{\ell(\lambda)}}{\partial p_{\lambda_1}\partial p_{\lambda_2} \cdots \partial p_{\lambda_{\ell(\lambda)}}},
   \end{align*}
-  for $a_{\lambda} = \prod\limits_{i=1}^{\ell(\lambda)} \lambda_i$. Now, let $f^{\perp}$ be an element on the left hand side. We have for some $b_\lambda \in \Q$ that $f = \sum\limits_{\lambda \in Par} b_{\lambda} p_{\lambda}$, and so using again that the adjoint is a ring morphism we get:
+  for $a_{\lambda} = \prod\limits_{i=1}^{\ell(\lambda)} \lambda_i$.
+
+  Now, let $f^{\perp}$ be an element on the left hand side. We have for some $b_\lambda \in \Q$ that $f = \sum\limits_{\lambda \in Par} b_{\lambda} p_{\lambda}$, and so using again that the adjoint is a ring morphism we get:
   \begin{align*}
     f^{\perp}
     &=
@@ -497,13 +499,15 @@
     &=
     \sum\limits_{\lambda \in Par} (b_{\lambda} a_{\lambda}) \cfrac{\partial^{\ell(\lambda)}}{\partial p_{\lambda_1}\partial p_{\lambda_2} \cdots \partial p_{\lambda_{\ell(\lambda)}}}, 
   \end{align*}
-  where $a_{\lambda} = \prod\limits_{i=1}^{\ell(\lambda)} \lambda_i$ and so $b_{\lambda} a_{\lambda} \in \Q$; and so $f^{\perp}$ is an element of the right hand side.
+  where $a_{\lambda} = \prod\limits_{i=1}^{\ell(\lambda)} \lambda_i$, and $b_{\lambda} a_{\lambda} \in \Q$; and so $f^{\perp}$ is an element of the right hand side.
   
-  For the opposite inclusion, let $i = (i_1, \dots, i_k)$, for $i_1, \dots, i_k \geq 1$ and $k \in \N$. Then, we can permute these into a partition. Assume without loss of generality that it already is a partition. We write
+  For the opposite inclusion, let $i = (i_1, \dots, i_k)$, for $i_1, \dots, i_k \geq 1$ and $k \in \N$. Then, we can permute these into a partition. We write
   \begin{align*}
-    \lambda^i = i,
+    \lambda^i
+    &= i \text{ permuted into a partition } \\
+    &= i^{\pi},
   \end{align*}
-  and get
+  for some $\pi \in \mathfrak{S}_k$, and get
   \begin{align*}
     \cfrac{\partial^k}{\partial p_{i_1} \partial p_{i_2} \cdots \partial p_{i_k}} = \cfrac{1}{a_{\lambda^i}} (p_{\lambda^i})^{\perp},
   \end{align*}
@@ -519,7 +523,7 @@
     &=
     (\sum\limits_{i} b_{i}\cfrac{1}{a_{\lambda^i}}p_{\lambda^i})^{\perp},
   \end{align*}
-  and $\sum\limits_{i} b_{i}\cfrac{1}{a_{\lambda^i}}p_{\lambda^i} \in Sym_{\Q}$; and so any $\Q$ linear combination on the right hand side is included in the left hand side.
+  where the sum is over $i=(i_1, \dots, i_k)$, with $i_1, \dots, i_k \geq 1$; and $k \in \N$, $a_{\lambda^i} = i_1 \cdots i_k$, and $b_{i} \in \Q$. Since $\sum\limits_{i} b_{i}\cfrac{1}{a_{\lambda^i}}p_{\lambda^i} \in Sym_{\Q}$, this $\Q$-linear combination from the right hand side is included in the left hand side.
 \end{proof}
 \newpage
 \begin{exercise}
