--- a/symmetric_fxns/final.tex
+++ b/symmetric_fxns/final.tex
@@ -581,7 +581,29 @@
 \begin{exercise}
   Let $m,n \in \N$. In the Heisenberg algebra, write $p_m^-e_n^+$ and $p_m^-h_n^+$ as linear combinations of elements of the form $f^+g^-$, $f,g \in Sym$.
 \end{exercise}
+\begin{proof}
+  \begin{align*}
+    \triangle p_m = 1 \otimes p_m + p_m \otimes 1,
+  \end{align*}
+  so using Prop 5.1.3 we have 
+  \begin{align*}
+    p_m^- e_n^+
+    &=
+    e_n^+p_m^- + (p_m^-e_n)^+1^- \\
+    &=
+    e_n^+p_m^- + ((-1)^{m-1}e_{n-m})^+1^-,
+  \end{align*}
+  where we used that $p_m^- e_n = (-1)^{m-1}e_{n-m}$ (Prop 4.2.9).
 
+  Next,
+  \begin{align*}
+    p_m^-h_n^+
+    &=
+    h_n^+p_m^- + (p_m^-h_n)^+1^- \\
+    &= h_n^+p_m^- + h_{n-m}^+1^-,
+  \end{align*}
+  where we used that $p_m^-h_n = h_{n-m}$ (Prop 4.2.9).
+\end{proof}
 \begin{exercise}
   Let $H$ be a subgroup of a finite group $G$, and let $f \in \mathcal{C}(H,\C)$. Define
   \begin{align*}
