Change the wording of the second last question.

--- a/symmetric_fxns/final.tex
+++ b/symmetric_fxns/final.tex
@@ -637,7 +637,7 @@
     \begin{align*}
       \hat f(y^{-1}zy) = f(y^{-1}zy) = f(z) = \hat f (z),
     \end{align*}
-    since $f \in \mathcal{C}(H,\C)$. Otherwise, $z \not \in H$ and
+    since $f \in \mathcal{C}(H,\C)$. Otherwise, $y^{-1}zy \not \in H$, so $z \not \in H$ and
     \begin{align*}
       \hat f(y^{-1}zy) = \hat f(z) = 0.
     \end{align*}
@@ -662,4 +662,7 @@
 \begin{exercise}
   Use Proposition 6.3.9 to compute the character table of $\mathfrak{S}_4$.
 \end{exercise}
+\begin{proof}
+  
+\end{proof}
 \end{document}
