--- a/symmetric_fxns/final.tex
+++ b/symmetric_fxns/final.tex
@@ -10,6 +10,7 @@
 \usepackage{amsfonts}
 \usepackage{enumerate}
 \usepackage{ytableau}
+\usepackage{tikz}
 \usepackage[utf8]{inputenc}
 \usepackage[top=1 in,bottom=1in, left=1 in, right=1 in]{geometry}
 
@@ -461,8 +462,29 @@
   
   $K_{(4,3,2)/(1,1), (2,1^5)} = 41$:
   
-  $K_{(4,3,2)/(1,1), (1^7)} = 77$
+  $K_{(4,3,2)/(1,1), (1^7)} = 77$:
 
+  We can only place a 1 in the bottom left or top left box:
+  \begin{align*}
+    \begin{ytableau}
+      \none & 1 & - & - \\
+      \none & - & - \\
+      - & -  
+    \end{ytableau}\quad,\quad    
+    \begin{ytableau}
+      \none & - & - & - \\
+      \none & - & - \\
+      1 & -  
+    \end{ytableau}\quad.\quad    \\          
+  \end{align*}
+  In the second case, we have to place the two in the top left box, so we get
+  \begin{align*}
+    \begin{ytableau}
+      \none & 2 & - & - \\
+      \none & - & - \\
+      1 & -  
+    \end{ytableau}\quad.\quad    \\          
+  \end{align*}
 \end{proof}
 
 \begin{exercise}
@@ -500,14 +522,16 @@
     \sum\limits_{\lambda \in Par} (b_{\lambda} a_{\lambda}) \cfrac{\partial^{\ell(\lambda)}}{\partial p_{\lambda_1}\partial p_{\lambda_2} \cdots \partial p_{\lambda_{\ell(\lambda)}}}, 
   \end{align*}
   where $a_{\lambda} = \prod\limits_{i=1}^{\ell(\lambda)} \lambda_i$, and $b_{\lambda} a_{\lambda} \in \Q$; and so $f^{\perp}$ is an element of the right hand side.
-  
-  For the opposite inclusion, let $i = (i_1, \dots, i_k)$, for $i_1, \dots, i_k \geq 1$ and $k \in \N$. Then, we can permute these into a partition. We write
+
+  For the opposite inclusion, we define a function $\N^k \to Par$,  $i \mapsto \lambda^i$ by:
   \begin{align*}
     \lambda^i
     &= i \text{ permuted into a partition } \\
     &= i^{\pi},
   \end{align*}
-  for some $\pi \in \mathfrak{S}_k$, and get
+  for some $\pi \in \mathfrak{S}_k$ such that $i^{\pi} \in Par$. 
+
+  Then
   \begin{align*}
     \cfrac{\partial^k}{\partial p_{i_1} \partial p_{i_2} \cdots \partial p_{i_k}} = \cfrac{1}{a_{\lambda^i}} (p_{\lambda^i})^{\perp},
   \end{align*}
@@ -571,7 +595,7 @@
     \nabla(f \otimes a \epsilon) (x) \\
     &= (\nabla \circ id \otimes \eta)(f \otimes a) (x),
   \end{align*}
-  where we used the commutativity of the counit diagram in the fourth equality. Identifying $af$ with $a \otimes f$, $f \otimes a$ (by $a \otimes f \overset{\cong}{\mapsto} af$ and $f \otimes a \overset{\cong}{\mapsto} af$) we conclude that
+  where we used the commutativity of the counit diagram in the fourth equality. Identifying $a \otimes f$, $f \otimes a$  with $af$ (by $a \otimes f \overset{\cong}{\mapsto} af$ and $f \otimes a \overset{\cong}{\mapsto} af$) we conclude that
   \begin{align*}
     \nabla \circ \eta \otimes id = \nabla \circ id \otimes \eta,
   \end{align*}
@@ -659,10 +683,11 @@
     where in the second last equality we used the result from the first part of this question.
   \end{enumerate}
 \end{proof}
+\newpage
 \begin{exercise}
   Use Proposition 6.3.9 to compute the character table of $\mathfrak{S}_4$.
 \end{exercise}
 \begin{proof}
-  
+
 \end{proof}
 \end{document}
