--- a/symmetric_fxns/final.tex
+++ b/symmetric_fxns/final.tex
@@ -577,6 +577,6 @@
   Use Proposition 6.3.9 to compute the character table of $\mathfrak{S}_4$.
 \end{exercise}
 \begin{proof}
-
+Borderstrip tableau of shape (4), and the column will have weights (4), (3,1), (2,2), (2,1,1), (1^4), and they're indexed by these too.
 \end{proof}
 \end{document}
