Write out the table.

--- a/symmetric_fxns/final.tex
+++ b/symmetric_fxns/final.tex
@@ -577,6 +577,23 @@
   Use Proposition 6.3.9 to compute the character table of $\mathfrak{S}_4$.
 \end{exercise}
 \begin{proof}
-Borderstrip tableau of shape (4), and the column will have weights (4), (3,1), (2,2), (2,1,1), (1^4), and they're indexed by these too.
+  
+  \begin{align*}
+
+    \begin{tabular}{|c|c|c|c|c|c|}
+      & (4) & (3,1) & (2,2)& (2,1,1) & (1^4)      \\
+      \hline
+      \chi^(4) & 1 & 1 & 1 & 1 & 1 \\
+      \hline
+      \chi^{(3,1)} & - & - & - & - & - \\
+      \hline
+      \chi^{(2,2)} & - & - & - & - & - \\
+      \hline
+      \chi^{(2,1,1)} & - & - & - & - & - \\
+      \hline      
+      \chi^{(1^4)} & - & - & - & - & - \\            
+    \end{tabular}
+  \end{align*}
+  
 \end{proof}
 \end{document}
