--- a/symmetric_fxns/final.tex
+++ b/symmetric_fxns/final.tex
@@ -585,7 +585,9 @@
       \hline
       \chi^(4) & 1 & 1 & 1 & 1 & 1 \\
       \hline
-      \chi^{(3,1)} & - & - & - & - & - \\
+      \chi^{(3,1)} & -1 & 0 & -1 & 1 & 3
+
+      \\
       \hline
       \chi^{(2,2)} & - & - & - & - & - \\
       \hline
