--- a/symmetric_fxns/final.tex
+++ b/symmetric_fxns/final.tex
@@ -586,10 +586,9 @@
       \chi^(4) & 1 & 1 & 1 & 1 & 1 \\
       \hline
       \chi^{(3,1)} & -1 & 0 & -1 & 1 & 3
-
       \\
       \hline
-      \chi^{(2,2)} & - & - & - & - & - \\
+      \chi^{(2,2)} & 0 & -1 & 2 & 0 & 2 \\
       \hline
       \chi^{(2,1,1)} & - & - & - & - & - \\
       \hline      
