--- a/symmetric_fxns/final.tex
+++ b/symmetric_fxns/final.tex
@@ -577,24 +577,22 @@
   Use Proposition 6.3.9 to compute the character table of $\mathfrak{S}_4$.
 \end{exercise}
 \begin{proof}
-  
   \begin{align*}
-
     \begin{tabular}{|c|c|c|c|c|c|}
+      \hline
       & (4) & (3,1) & (2,2)& (2,1,1) & (1^4)      \\
       \hline
-      \chi^(4) & 1 & 1 & 1 & 1 & 1 \\
+      \chi^{(4)} & 1 & 1 & 1 & 1 & 1 \\
       \hline
-      \chi^{(3,1)} & -1 & 0 & -1 & 1 & 3
-      \\
+      \chi^{(3,1)} & -1 & 0 & -1 & 1 & 3 \\
       \hline
       \chi^{(2,2)} & 0 & -1 & 2 & 0 & 2 \\
       \hline
-      \chi^{(2,1,1)} & - & - & - & - & - \\
+      \chi^{(2,1,1)} & 1 & 0 & -1 & -1 & 3 \\
       \hline      
-      \chi^{(1^4)} & - & - & - & - & - \\            
+      \chi^{(1^4)} & -1 & 1 & 1 & -1 & 1 \\
+      \hline
     \end{tabular}
   \end{align*}
-  
 \end{proof}
 \end{document}
