--- a/symmetric_fxns/final.tex
+++ b/symmetric_fxns/final.tex
@@ -577,6 +577,159 @@
   Use Proposition 6.3.9 to compute the character table of $\mathfrak{S}_4$.
 \end{exercise}
 \begin{proof}
+  Let $\lambda, \mu \in Par$. We list the borderstrip tableau $T \in BST(\lambda, \mu)$, and calculate the character table entries.
+
+  \begin{itemize}
+  \item
+    $\lambda=(4)$:
+    \begin{itemize}
+    \item
+      $\mu = (4)$:
+      
+      \begin{align*}
+        \begin{ytableau}
+          1 & 1 & 1 & 1
+        \end{ytableau}\quad,
+      \end{align*}
+      $\chi_{\mu}^{\lambda} = (-1)^0 = 1$.
+
+    \item
+      $\mu = (3,1)$:
+
+      \begin{align*}
+        \begin{ytableau}
+          1 & 1 & 1 & 2\\
+        \end{ytableau}\quad,
+      \end{align*}
+      $\chi_{\mu}^{\lambda} = (-1)^{0+0} = 1$.
+
+    \item
+      $\mu = (2,2)$:
+
+      \begin{align*}
+        \begin{ytableau}
+          1 & 1 & 2 & 2\\
+        \end{ytableau}\quad,
+      \end{align*}
+      $\chi_{\mu}^{\lambda} = (-1)^{0+0} = 1$.    
+
+    \item
+      $\mu = (2,1,1)$:
+
+      \begin{align*}
+        \begin{ytableau}
+          1 & 1 & 2 & 3\\
+        \end{ytableau}\quad,
+      \end{align*}
+      $\chi_{\mu}^{\lambda} = (-1)^{0+0+0} = 1$.
+
+    \item
+      $\mu = (1^4)$:
+
+      \begin{align*}
+        \begin{ytableau}
+          1 & 2 & 3 & 4\\
+        \end{ytableau}\quad,
+      \end{align*}
+      $\chi_{\mu}^{\lambda} = (-1)^{0+0+0+0} = 1$.
+    \end{itemize}
+    
+    We have then the first row of our character table $\chi^{\lambda} = (1,1,1,1,1)$.    
+  \item
+    $\lambda = (3,1)$:
+    
+    \begin{itemize}
+      
+    \item
+      $\mu = (4)$:
+      
+      \begin{align*}
+        \begin{ytableau}
+          1 & 1 & 1 \\
+          1
+        \end{ytableau}\quad,
+      \end{align*}
+      $\chi_{\mu}^{\lambda}  = (-1)^{1} = -1$.
+
+    \item
+      $\mu = (3,1)$:
+      
+      \begin{align*}
+        \begin{ytableau}
+          1 & 1 & 1 \\
+          2
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 & 1 & 2 \\
+          1
+        \end{ytableau}\quad,        
+      \end{align*}
+      $\chi_{\mu}^{\lambda}  = (-1)^{0+0} + (-1)^{1 + 0} = 0$.
+
+    \item
+      $\mu = (2,2)$:
+      
+      \begin{align*}
+        \begin{ytableau}
+          1 & 2 & 2 \\
+          1
+        \end{ytableau}\quad,        
+      \end{align*}
+      $\chi_{\mu}^{\lambda}  = (-1)^{1+0} = -1$.
+
+    \item
+      $\mu = (2,1,1)$:
+      
+      \begin{align*}
+        \begin{ytableau}
+          1 & 1 & 2 \\
+          3
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 & 1 & 3 \\
+          2
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 & 2 & 3 \\
+          1
+        \end{ytableau}\quad,                
+      \end{align*}
+      $\chi_{\mu}^{\lambda}  = (-1)^{0+0+0} + (-1)^{0+0+0} + (-1)^{1+0+0}= 1$.
+
+    \item
+      $\mu = (1^4)$:
+      
+      \begin{align*}
+        \begin{ytableau}
+          1 & 3 & 4 \\
+          2
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 & 2 & 3 \\
+          4
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 & 2 & 4 \\
+          3
+        \end{ytableau}\quad,                
+      \end{align*}
+      $\chi_{\mu}^{\lambda}  = (-1)^{0+0+0+0} + (-1)^{0+0+0+0} +(-1)^{0+0+0+0} = 3$.
+
+    \end{itemize}
+    The second row is $\chi^{\lambda} = (-1,0,-1,1,3). $    
+
+  \item
+    $\lambda = (2,2)$:
+    
+    \begin{itemize}
+    \item
+      $\mu = (4)$:
+    \end{itemize}
+    
+    
+  \end{itemize}
+
+  We have for partitions of shape $\lambda = (4)$ and weight $\mu = (4)$
   \begin{align*}
     \begin{tabular}{|c|c|c|c|c|c|}
       \hline
