--- a/symmetric_fxns/final.tex
+++ b/symmetric_fxns/final.tex
@@ -722,14 +722,225 @@
     $\lambda = (2,2)$:
     
     \begin{itemize}
+      
     \item
       $\mu = (4)$:
+      
+      $BST(\lambda,\mu) = \emptyset$, so $\chi_{\mu}^{\lambda} = 0$.
+
+    \item
+      $\mu = (3,1)$:
+      \begin{align*}
+        \begin{ytableau}
+          1 & 1 \\
+          1 & 2
+        \end{ytableau}\quad,\quad
+      \end{align*}
+      
+      $\chi_{\mu}^{\lambda} = (-1)^{1+0} = -1$.
+
+    \item
+      $\mu = (2,2)$:
+      \begin{align*}
+        \begin{ytableau}
+          1 & 1 \\
+          2 & 2 
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 & 2 \\
+          1 & 2 
+        \end{ytableau}\quad,\quad        
+      \end{align*}
+
+      $\chi_{\mu}^{\lambda} = (-1)^{0 + 0} + (-1)^{1 + 1} = 2$.
+
+    \item
+      $\mu = (2,1,1)$:
+      \begin{align*}
+        \begin{ytableau}
+          1 & 1 \\
+          2 & 3 
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 & 2 \\
+          1 & 3 
+        \end{ytableau}\quad,\quad        
+      \end{align*}
+      
+      $\chi_{\mu}^{\lambda} = (-1)^{0 + 0 + 0} + (-1)^{1 + 0 + 0} = 0$.
+
+    \item
+      $\mu = (1^4)$:
+      \begin{align*}
+        \begin{ytableau}
+          1 & 3 \\
+          2 & 4 
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 & 2 \\
+          3 & 4 
+        \end{ytableau}\quad,\quad
+      \end{align*}
+      
+      $\chi_{\mu}^{\lambda} = (-1)^{0 + 0 + 0 + 0} + (-1)^{0 + 0 + 0 + 0} = 2$.      
     \end{itemize}
+    The third row is $\chi^\lambda = (0,-1,2,0,2)$.
+
+  \item
+    $\lambda = (2,1,1)$:
     
-    
+    \begin{itemize}
+      
+    \item
+      $\mu = (4)$:
+      \begin{align*}
+        \begin{ytableau}
+          1 & 1 \\
+          1 \\
+          1
+        \end{ytableau}\quad,
+      \end{align*}
+      $\chi_{\mu}^{\lambda} = (-1)^{2} = 1$.
+
+    \item
+      $\mu = (3,1)$:
+      \begin{align*}
+        \begin{ytableau}
+          1 & 2 \\
+          1 \\
+          1
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 & 1 \\
+          1 \\
+          2
+        \end{ytableau}\quad,        
+      \end{align*}
+      $\chi_{\mu}^{\lambda} = (-1)^{2+0} + (-1)^{1+0} = 0$.
+
+    \item
+      $\mu = (2,2)$:
+      \begin{align*}
+        \begin{ytableau}
+          1 & 1 \\
+          2 \\
+          2
+        \end{ytableau}\quad,        
+      \end{align*}
+      $\chi_{\mu}^{\lambda} = (-1)^{0+1}= -1$.
+
+    \item
+      $\mu = (2,1,1)$:
+      \begin{align*}
+        \begin{ytableau}
+          1 & 3 \\
+          1 \\
+          2
+        \end{ytableau}\quad,\quad                        
+        \begin{ytableau}
+          1 & 2 \\
+          1 \\
+          3
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 & 1 \\
+          2 \\
+          3
+        \end{ytableau}\quad,\quad
+      \end{align*}
+      $\chi_{\mu}^{\lambda} = (-1)^{1+0+0} + (-1)^{1+0+0} + (-1)^{0 + 0 +0}= -1$.
+
+    \item
+      $\mu = (1^4)$:
+      \begin{align*}
+        \begin{ytableau}
+          1 & 4 \\
+          2 \\
+          3
+        \end{ytableau}\quad,\quad                        
+        \begin{ytableau}
+          1 & 3 \\
+          2 \\
+          4
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 & 2 \\
+          3 \\
+          4
+        \end{ytableau}\quad,\quad
+      \end{align*}
+      $\chi_{\mu}^{\lambda} = (-1)^{0+0+0+0} +  (-1)^{0+0+0+0} +  (-1)^{0+0+0+0}= 3$.            
+    \end{itemize}
+    The fourth row is $\chi^{\lambda} = (1,0,-1,-1,3)$.
+
+  \item
+    $\lambda = (1^4)$:
+    \begin{itemize}
+    \item
+      $\mu = (4)$:
+      \begin{align*}
+        \begin{ytableau}
+          1 \\
+          1 \\
+          1 \\
+          1 \\
+        \end{ytableau}\quad,
+      \end{align*}
+      $\chi_\mu^{\lambda} = (-1)^3 = -1$.
+
+    \item
+      $\mu = (3,1)$:
+      \begin{align*}
+        \begin{ytableau}
+          1 \\
+          1 \\
+          1 \\
+          2 \\
+        \end{ytableau}\quad,
+      \end{align*}
+      $\chi_\mu^{\lambda} = (-1)^{2+0} = 1$.
+
+    \item
+      $\mu = (2,2)$:
+      \begin{align*}
+        \begin{ytableau}
+          1 \\
+          1 \\
+          2 \\
+          2 \\
+        \end{ytableau}\quad,
+      \end{align*}
+      $\chi_\mu^{\lambda} = (-1)^{1+1} = 1$.
+
+    \item
+      $\mu = (2,1,1)$:
+      \begin{align*}
+        \begin{ytableau}
+          1 \\
+          1 \\
+          2 \\
+          3 \\
+        \end{ytableau}\quad,
+      \end{align*}
+      $\chi_\mu^{\lambda} = (-1)^{1+0+0} = -1$.
+
+    \item
+      $\mu = (1^4)$:
+      \begin{align*}
+        \begin{ytableau}
+          1 \\
+          2 \\
+          3 \\
+          4 \\
+        \end{ytableau}\quad,
+      \end{align*}
+      $\chi_\mu^{\lambda} = (-1)^{0+0+0+0} = 1$.                        
+    \end{itemize}
+  \item
+    The fifth row is $\chi^{\lambda} = (-1,1,1,-1,1)$.
   \end{itemize}
 
-  We have for partitions of shape $\lambda = (4)$ and weight $\mu = (4)$
+  We put our rows into a table:
   \begin{align*}
     \begin{tabular}{|c|c|c|c|c|c|}
       \hline
@@ -745,7 +956,7 @@
       \hline      
       \chi^{(1^4)} & -1 & 1 & 1 & -1 & 1 \\
       \hline
-    \end{tabular}
+    \end{tabular}\quad.
   \end{align*}
 \end{proof}
 \end{document}
