--- a/symmetric_fxns/final.tex
+++ b/symmetric_fxns/final.tex
@@ -334,46 +334,150 @@
   Write the skew Schur function $s_{(4,3,2)/(1,1)}$ as a linear combination of Schur functions. 
 \end{exercise}
 \begin{proof}
-   equation (3.38) we have 
+   By Equation (3.38) we have 
   \begin{align*}
     s_{\lambda/\mu} = \sum\limits_{\nu \in Par} c_{\mu \nu}^{\lambda} s_{\nu},
   \end{align*}
-  and by Theorem 3.6.9, $c_{\mu \nu}^{\lambda}$ is the number of Littlewood-Richardson tableaux of shape $\lambda/\mu$ and weight $\nu$.
-  Since $s_{(4,3,2)/(1,1)}$ is homogeneous of degree 7, we compute $c_{\mu \nu}^{\lambda}$, for $\nu \in Par(7)$. In what follows, $\lambda = (4,3,2)$ and $\mu = (1,1)$:
+  and by Theorem 3.6.9, $c_{\mu \nu}^{\lambda}$ is the number of Littlewood-Richardson tableaux of shape $\lambda/\mu$ and weight $\nu$. Additionally, we use that a tableau is a Littlewood-Richardson tableau if and only if $word(T)$ is a lattice word (Prop 3.6.12). Since $s_{(4,3,2)/(1,1)}$ is homogeneous of degree 7, we compute $c_{\mu \nu}^{\lambda}$, for $\nu \in Par(7)$.
 
-  There are no semi standard tableaux of shape $\lambda/\mu$ and weight $\nu = (6,1), (5,2), (5,1^2), (4,3)$, so $c_{\mu \nu}^{\lambda} = 0$ for these $\nu$.
+  Let $\lambda = (4,3,2)$ and $\mu = (1,1)$:
   
-  $\nu =  (4,2,1)$:
+  \begin{itemize}
+  \item
+    $\nu = (6,1)$:
+    
+    No semistandard tableau of this weight, so $c_{\mu \nu}^{\lambda} = 0$.
+  \item
+    $\nu = (5,2)$:
+    
+    No semistandard tableau of this weight, so $c_{\mu \nu}^{\lambda} = 0$.    
 
-  There's only one semi-standard tableau of this weight, which is a Littlewood-Richardson tableau.
+  \item
+    $\nu = (5,1^2)$:
+
+    No semistandard tableau of this weight, so $c_{\mu \nu}^{\lambda} = 0$.    
+    
+  \item
+    $\nu = (4,3)$:
+
+    No semistandard tableau of this weight, so $c_{\mu \nu}^{\lambda} = 0$.    
+    
+  \item 
+    $\nu =  (4,2,1)$:
+
+    There's only one semi standard tableau of this weight, which is also a lattice word:
+    \begin{align*}
+      \begin{ytableau}
+        \none & 1 & 1 & 1 \\
+        \none & 2 & 2 \\
+        1 & 3
+      \end{ytableau}\quad,\quad
+    \end{align*}
+    $c_{\mu \nu}^{\lambda} = 1 $.
+
+  \item 
+    $\nu = (4,1^3)$:
+
+    There are two semi standard tableau of this weight, both of which are not lattice words (in the first word a $3$ appears before a $2$, in the second a $4$ before a $2$) :
+    \begin{align*}
+      \begin{ytableau}
+        \none & 1 & 1 & 1 \\
+        \none & 2 & 3 \\
+        1 & 4
+      \end{ytableau}\quad,\quad
+      \begin{ytableau}
+        \none & 1 & 1 & 1 \\
+        \none & 2 & 4 \\
+        1 & 3
+      \end{ytableau}\quad,\quad      
+    \end{align*}
+    so $c_{\mu \nu}^{\lambda} = 0$.    
+  \item 
+    $\nu = (3^2,1)$:
+
+    There are two semi standard tableau of this weight, only the first of which corresponds to a lattice word (the second does not correspond to a lattice word since in it's word there's something either than a $1$ in the top right box):
+    \begin{align*}
+      \begin{ytableau}
+        \none & 1 & 1 & 1 \\
+        \none & 2 & 2 \\
+        2 & 3
+      \end{ytableau}\quad,\quad
+      \begin{ytableau}
+        \none & 1 & 1 & 2 \\
+        \none & 2 & 2 \\
+        1 & 3
+      \end{ytableau}\quad,\quad      
+    \end{align*}
+    so $c_{\mu \nu}^{\lambda} = 1$.
+    
+  \item 
+    $\nu = (3,2^2)$:
+    
+    \begin{align*}
+      \begin{ytableau}
+        \none & 1 & 1 & 1 \\
+        \none & 2 & 2 \\
+        3 & 3
+      \end{ytableau}\quad,\quad
+      \begin{ytableau}
+        \none & 1 & 1 & 2 \\
+        \none & 2 & 3 \\
+        1 & 3
+      \end{ytableau}\quad,\quad      
+      \begin{ytableau}
+        \none & 1 & 1 & 3 \\
+        \none & 2 & 2 \\
+        1 & 3
+      \end{ytableau}\quad,\quad
+      \begin{ytableau}
+        \none & 1 & 1 & 1 \\
+        \none & 2 & 3 \\
+        2 & 3
+      \end{ytableau}\quad,\quad      
+    \end{align*}
+    The first tableau corresponds to a lattice word, the second and third have something other than a $1$ in the top right box so don't correspond to lattice words, and in the word of the fourth a $3$ will appear before a $2$, so this last one isn't a lattice word either. We conclude $c_{\mu \nu}^{\lambda} = 1$.
+    
+  \item 
+    $\nu = (3,2,1^2)$:
+
+    The constraint that the word has to be a lattice word means that the first row must be $(1,1,1)$, the second $(2,2)$, but then we're left with the last row $(3,4)$. Since the first instance of a $4$ will appear before the first instance of a $3$ in the word, this is not a lattice word, and so there are no Littlewood-Richardson tableau of this weight: 
+    \begin{align*}
+      \begin{ytableau}
+        \none & 1 & 1 & 1 \\
+        \none & 2 & 2 \\
+        3 & 4
+      \end{ytableau}\quad,
+    \end{align*}    
+    $c_{\mu \nu}^{\lambda} = 0$.
+    
+  \item 
+    $\nu = (3,1^4)$:
+
+    First row $1$s, second row will have to be strictly increasing (as only distinct numbers remain), so the first instance of a greater number will appear before some lesser number, which therefore cannot be a lattice word, so $c_{\mu \nu}^{\lambda} = 0$.
+    
+  \item 
+    $\nu = (2^3,1)$:
+
+    Top right box is not 1, so no lattice words, so $c_{\mu \nu}^{\lambda} = 0 $.
+  \item 
+    $\nu = (2^2,1^3)$:
+
+    Top right box is not 1, so no lattice words, so $c_{\mu \nu}^{\lambda} = 0 $.   
+    
+  \item 
+    $\nu = (2,1^5)$:
+
+    Top right box is not 1, so no lattice words, so $c_{\mu \nu}^{\lambda} = 0 $.   
+  \item 
+    $\nu = (1^7)$:
+
+    Top right box is not 1, so no lattice words, so $c_{\mu \nu}^{\lambda} = 0 $.    
+  \end{itemize}
+
+  Putting it all together, we get
   \begin{align*}
-    \begin{ytableau}
-      \none & 1 & 1 & 1 \\
-      \none & 2 & 2 \\
-      1 & 3 
-    \end{ytableau},
+    s_{\lambda/\mu} = s_{(4,2,1)} + s_{(3,3,1)} + s_{(3,2,2)}.
   \end{align*}
-  so $c_{\mu \nu}^{\lambda} = 1$
-  
-  $\nu = (4,1^3)$:
-  
-  $\nu = (3^2,1)$:
-  
-  $\nu = (3,2^2)$:
-  
-  $\nu = (3,2,1^2)$:
-  
-  $\nu = (3,1^4)$:
-  
-  $\nu = (2^3,1)$:
-  
-  $\nu = (2^2,1^3)$:
-  
-  $\nu = (2,1^5)$:
-  
-  $\nu = (1^7)$:
-
-
 \end{proof}
 
 \begin{exercise}
