--- a/symmetric_fxns/final.tex
+++ b/symmetric_fxns/final.tex
@@ -539,9 +539,9 @@
     &=
     (\sum\limits_{i} b_{i}\cfrac{1}{a_{\lambda^i}}p_{\lambda^i})^{\perp},
   \end{align*}
-  where the sum is over $i=(i_1, \dots, i_k)$, with $i_1, \dots, i_k \geq 1$, and $k \in \N$. Since $\sum\limits_{i} b_{i}\cfrac{1}{a_{\lambda^i}}p_{\lambda^i} \in Sym_{\Q}$, this $\Q$-linear combination from the right hand side is included in the left hand side.
+  where the sum is over ordered $i \in \N^k$, $k \in \N$. Since $\sum\limits_{i} b_{i}\cfrac{1}{a_{\lambda^i}}p_{\lambda^i} \in Sym_{\Q}$, this $\Q$-linear combination from the right hand side is included in the left hand side.
 \end{proof}
-\newpage
+
 \begin{exercise}
   Suppose $(C, \triangle, \epsilon)$ is a counital coassociative coalgebra over a field $k$. Show that the dual space $C^* = Hom_k(C,k)$ is a unital associative algebra with multiplication
   \begin{align*}
