--- a/symmetric_fxns/final.tex
+++ b/symmetric_fxns/final.tex
@@ -539,7 +539,7 @@
     &=
     (\sum\limits_{i} b_{i}\cfrac{1}{a_{\lambda^i}}p_{\lambda^i})^{\perp},
   \end{align*}
-  where the sum is over ordered $i \in \N^k$, $k \in \N$. Since $\sum\limits_{i} b_{i}\cfrac{1}{a_{\lambda^i}}p_{\lambda^i} \in Sym_{\Q}$, this $\Q$-linear combination from the right hand side is included in the left hand side.
+  where the sum is over ordered $i=(i_1, \dots, i_k) \in \N^k$, $k \in \N$. Since $\sum\limits_{i} b_{i}\cfrac{1}{a_{\lambda^i}}p_{\lambda^i} \in Sym_{\Q}$, this $\Q$-linear combination from the right hand side is included in the left hand side.
 \end{proof}
 
 \begin{exercise}
