Justify rearranging mixed partials.

--- a/symmetric_fxns/final.tex
+++ b/symmetric_fxns/final.tex
@@ -493,7 +493,9 @@
   \begin{align*}
     p_n^{\perp} = n \cfrac{\partial}{\partial p_n},
   \end{align*}
-  and by Prop 4.2.1 we know that the adjoint is a ring morphism, so
+  We use the assumption that the mixed partials commute in their action on $Sym$.
+  \footnote{This is true, since, for example, $p_n^- h_m = h_{m-n}$, and $h_\lambda$ is a basis of $Sym$, for $\lambda \in Par$; so the action of the $p_n^-$ on $h_{\lambda}$ is commutative, i.e. $p_n^- p_m^- h_{\lambda} = p_m^- p_n^- h_{\lambda}.}
+  By Prop 4.2.1 we know that the adjoint is a ring morphism, so
   \begin{align*}
     p_{\lambda}^{\perp} &=
     (p_{\lambda_1} \cdots p_{\lambda_{\ell(\lambda)}})^{\perp} \\
@@ -501,7 +503,7 @@
     &= \prod_{i=1}^{\ell(\lambda)} \lambda_i \cfrac{\partial}{\partial p_{\lambda_i}} \\
     &= a_{\lambda} \cfrac{\partial^{\ell(\lambda)}}{\partial p_{\lambda_1}\partial p_{\lambda_2} \cdots \partial p_{\lambda_{\ell(\lambda)}}},
   \end{align*}
-  for $a_{\lambda} = \prod\limits_{i=1}^{\ell(\lambda)} \lambda_i$. 
+  for $a_{\lambda} = \prod\limits_{i=1}^{\ell(\lambda)} \lambda_i$.
 
   Now, let $f^{\perp}$ be an element on the left hand side. We have for some $b_\lambda \in \Q$ that $f = \sum\limits_{\lambda \in Par} b_{\lambda} p_{\lambda}$, and so using again that the adjoint is a ring morphism we get:
   \begin{align*}
@@ -522,8 +524,9 @@
     &= i \text{ permuted into a partition } \\
     &= i^{\pi},
   \end{align*}
-  for some $\pi \in \mathfrak{S}_k$ such that $i^{\pi} \in Par$. This is well defined, since each such ordered $i$ is a weak composition, so there exists a unique partition into which it may be permuted. Since the adjoint is a ring morphism we have that the mixed partials commute, and so rearranging terms we get:
-  
+  for some $\pi \in \mathfrak{S}_k$ such that $i^{\pi} \in Par$. This is well defined, since each such ordered $i$ is a weak composition, so there exists a unique partition into which it may be permuted.
+
+  We have
   \begin{align*}
     \cfrac{\partial^k}{\partial p_{i_1} \partial p_{i_2} \cdots \partial p_{i_k}} = \cfrac{1}{a_{\lambda^i}} (p_{\lambda^i})^{\perp},
   \end{align*}
